--- a/src/components/my-component/driver-card-all-races/driver-card-all-races.css
+++ b/src/components/my-component/driver-card-all-races/driver-card-all-races.css
@@ -2,7 +2,7 @@
 .container .race{
     margin-top: 200px;
     border-radius: 20px 20px 20px 20px;
-    margin-left:-50px ;
+    margin-left:10px ;
     align-content: center;
     width: 500px;
     
@@ -14,14 +14,14 @@
     color: white;
     border-radius: 150px 10px 150px 10px;
     text-align: center ;
-    margin-left: -5px;
+   
  
 }
 
 
 .table-bordered {
-    text-align:center;
-    margin-left: 10px;
+    text-align:left;
+    margin-left: 13px;
     
     
 }
