--- a/src/components/my-component/driver-card-ranking-races/driver-card-ranking-races.css
+++ b/src/components/my-component/driver-card-ranking-races/driver-card-ranking-races.css
@@ -1,45 +1,49 @@
-
-.container .ranking{
-    margin-top: 50px;
-    border-radius: 20px 20px 20px 20px;
-    margin-left:120px ;
-
-    width: 70%;
-    
-
-}
-.table-bordered {
-    text-align:center;
-    margin-left: 10px;
-    width: 100%;
-    
-}
-.table-bordered :hover{
-    color: green;
-    transform: translateX(1%);
-
-    
-}
-.container .ranking .h6{
-    margin-left: 10px;
-    color: black;
+table thead tr {
+  background-color: #06b70b;
+  color: white;
 }
 
-    
-.header-ranking{
-    background-color: #06B70B;
-    color: white;
-    border-radius: 150px 10px 150px 10px;
-    text-align: center ;
-    margin-left: -5px;
- 
+table thead tr th {
+  width: 150px;
+  text-align: left;
 }
-.card .card-img-top{
-    width: 50px;
-    height: 50px;
 
-    margin-left: -10px;
-    border-radius: 10px;
-    border-radius: 40px;
-    
+.contentTable .card-img-top {
+  width: 30px;
+  height: 30px;
+
+  margin-left: 50px;
+  border-radius: 10px;
+  border-radius: 40px;
+}
+table {
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 85%;
+  border-collapse: separate;
+
+}
+
+table tbody :hover {
+  color: green;
+  transform: translateX(1%);
+}
+
+td {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+tr:first-child th:first-child {
+  border-top-left-radius: 150px;
+}
+
+tr:first-child th:last-child {
+  border-bottom-right-radius: 150px;
 }
