Fixed problem with the table driver-card-all-races

--- a/src/components/my-component/driver-card-all-races/driver-card-all-races.css
+++ b/src/components/my-component/driver-card-all-races/driver-card-all-races.css
@@ -1,36 +1,43 @@
-
-.container .race{
-    margin-top: 200px;
-    border-radius: 20px 20px 20px 20px;
-    margin-left:10px ;
-    align-content: center;
-    width: 500px;
-    
-
-}
-
-.header-race{
-    background-color: #06B70B;
+table thead tr {
+    background-color: #06b70b;
     color: white;
-    border-radius: 150px 10px 150px 10px;
-    text-align: center ;
-   
- 
-}
+    margin-top: 100px;
+  }
+  
+  table thead tr th {
+    width: 150px;
+    text-align: center;
+  }
 
-
-.table-bordered {
-    text-align:left;
-    margin-left: 13px;
-    
-    
-}
-.table-bordered :hover{
+  table {
+    margin-top: 200px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 150%;
+    border-collapse: separate;
+  
+  }
+  
+  table tbody :hover {
     color: green;
     transform: translateX(1%);
-    
-}
-.table-bordered .tbody {
-    height: 100px;
-}
-    
+  }
+  
+  td {
+    border: 1px solid #dddddd;
+    text-align: center;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+  
+  tr:first-child th:first-child {
+    border-top-left-radius: 150px;
+  }
+  
+  tr:first-child th:last-child {
+    border-bottom-right-radius: 150px;
+  }
+  
