--- a/src/components/my-component/driver-card-all-races/driver-card-all-races.css
+++ b/src/components/my-component/driver-card-all-races/driver-card-all-races.css
@@ -1,43 +1,68 @@
 table thead tr {
-    background-color: #06b70b;
-    color: white;
-    margin-top: 100px;
-  }
-  
-  table thead tr th {
-    width: 150px;
-    text-align: center;
-  }
+  background-color: #06b70b;
+  color: white;
+  margin-top: 100px;
+}
 
-  table {
-    margin-top: 200px;
-    margin-right: auto;
-    margin-left: auto;
-    width: 150%;
-    border-collapse: separate;
-  
-  }
-  
-  table tbody :hover {
-    color: green;
-    transform: translateX(1%);
-  }
-  
-  td {
-    border: 1px solid #dddddd;
-    text-align: center;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
-  
-  tr:first-child th:first-child {
-    border-top-left-radius: 150px;
-  }
-  
-  tr:first-child th:last-child {
-    border-bottom-right-radius: 150px;
-  }
-  
+table thead tr th {
+  width: 150px;
+  text-align: center;
+}
+
+table {
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 150%;
+  border-collapse: separate;
+}
+
+table tbody :hover {
+  color: green;
+  transform: translateX(1%);
+}
+
+td {
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+tr:first-child th:first-child {
+  border-top-left-radius: 150px;
+}
+
+tr:first-child th:last-child {
+  border-bottom-right-radius: 150px;
+}
+
+.container .card-driver {
+  margin-left: 80px;
+  margin-top: 20px;
+  max-width: 11rem;
+  border-radius: 23px 26px 23px 23px;
+  border-color: #06b70b;
+  height: 440px;
+}
+.card .card-img-top {
+  width: 90px;
+  height: 95px;
+  margin-top: 10px;
+  margin-left: 40px;
+  border-radius: 10px;
+}
+
+.header-driver {
+  background-color: #06b70b;
+  border-radius: 20px 19px 0px 0px;
+  text-align: center;
+  color: white;
+}
+.driver-body {
+  color: #06b70b;
+  text-align: center;
+}
